--- a/dog-app-I.html
+++ b/dog-app-I.html
@@ -13838,6 +13838,20 @@ Dog dectection in first 100 images in dog_files : 88.0%
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer</strong>:</p>
+<ul>
+<li>My code resizes the images by<ul>
+<li>cropping the given PIL Image and resizing it to 224px</li>
+</ul>
+</li>
+<li>Yes<ul>
+<li>randomly changing the brightness, contrast and saturation of an image</li>
+<li>horizontally flipping the given PIL Image randomly with a given probability</li>
+<li>performing perspective transformation of the given PIL Image randomly with a given probability</li>
+<li>vertically flipping the given PIL Image randomly with a given probability</li>
+<li>rotating the image by angle ranging from -90 to 90</li>
+</ul>
+</li>
+</ul>
 
 </div>
 </div>
@@ -13958,6 +13972,11 @@ Dog dectection in first 100 images in dog_files : 88.0%
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer:</strong></p>
+<ol>
+<li>Created 3 convolutional layers and 2 fully connected layers</li>
+<li>Added batch normalization as it enables faster and more stable training of deep neural networks</li>
+<li>Added dropout as it avoids overfitting</li>
+</ol>
 
 </div>
 </div>
